--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=3001
-BD_CONNECTION=mongodb://127.0.0.1:27017/dbGameStore
+BD_CONNECTION=mongodb://localhost:27017/dbGameStore
 SECRET_KEY_JWT=SecretKey482283
